<resources>
    <string name="app_name">EverIt Rider</string>
    <string name="goto_login" translatable="false">Login</string>
    <string name="signup">Sign Up</string>
    <string name="hint_login">Already a member?</string>
    <string name="phone_number">Phone number</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="account_created">Account created successfully</string>
    <string name="home">Home</string>
    <string name="notification_location_title">Rider at work</string>
    <string name="notification_location_body">Continuous position detection service activated</string>
    <string name="message_no_gps_permission">Without GPS permissions it\'s not possible to start the work shift</string>
    <string name="text_service_start">Start working</string>
    <string name="text_service_stop">Stop working</string>
    <string name="gps_permission_explanation">The application needs to know your position, even while you are not using it, to receive delivery proposals</string>
    <string name="proposal_accept">Accept</string>
    <string name="proposal_refuse">Refuse</string>
    <string name="pickup_by">Pickup by</string>

    <plurals name="pickup_minutes">
        <item quantity="one">Pickup within %d minute</item>
        <item quantity="other">Pickup within %d minutes</item>
    </plurals>

    <string name="pickup_now">Now</string>
    <string name="pickup_late">Late</string>
    <string name="proposal_accept_long">Accept proposal</string>
    <string name="proposal_refuse_long">Refuse proposal</string>
    <string name="proposal_accept_explanation">Are you sure you want to accept the delivery proposal? The operation is irreversible</string>
    <string name="proposal_refuse_explanation">Are you sure you want to refuse the delivery proposal? The operation is irreversible</string>
    <string name="proposal_accepted">Proposal accepted</string>

    <string name="order_late">The order is late</string>

    <string name="pickup_at">Pickup at</string>
    <string name="proposal_refused">Proposal refused</string>

    <string name="pickup_address">Pickup address</string>
    <string name="deliver_address">Deliver address</string>


    <string name="label_proposal">Proposal</string>
    <string name="label_assigned_orders">Assigned</string>
    <string name="label_deliveries">To deliver</string>
    <string name="activity_my_works">My works</string>
    <string name="label_delivery_notes">Delivery notes</string>
    <string name="pickup_button">Pickup the order</string>
    <string name="deliver_button">Deliver the order</string>
    <string name="label_order_number">Order number:</string>
    <string name="order_withdrawn">Order withdrawn</string>
    <string name="order_withdrawn_explanation">Now you can deliver the order to the specified address</string>

    <string name="proposal_empty_placeholder">No proposal</string>
    <string name="assigned_order_empty_placeholder">No order to pickup</string>
    <string name="delivery_empty_placeholder">No delivery in progress</string>
    <string name="late">Late</string>

    <string name="notification_channel_id" translatable="false">FirebaseNotifications-RiderChannel</string>
    <string name="notification_channel_name">Server notifications</string>

    <string name="account_detail">Account detail</string>
    <string name="account_info">Account info</string>
    <string name="privacy_and_security">Privacy and security</string>

    <string name="edit">Edit</string>
    <string name="confirm">Confirm</string>
    <string name="account_updated">Account updated</string>

    <string name="logout" translatable="false">Logout</string>

    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="new_password_conf">Confirm new password</string>
    <string name="change_password">Change password</string>
    <string name="delete_account">Delete account</string>

    <string name="message_field_required">Required field</string>
    <string name="message_password_changed">The password has been successfully changed</string>
    <string name="new_password_equals_old">New password cannot be equals to the old password</string>
    <string name="message_password_wrong">The password format is incorrect. The password must be at least 8 characters long and contain at least one number</string>
    <string name="message_password_confirm_mismatch">Password mismatch</string>
    <string name="message_confirm_delete">Are you sure you want to delete the account? All data will be deleted</string>

    <string name="title_deliveryhistory_list">Deliveries history</string>
    <string name="title_deliveryhistory_detail">Delivery history detail</string>

    <string name="no_delivered_orders">No delivered orders</string>

    <string name="delivery_date">Delivery date:</string>
    <string name="delivery_address">Delivery address:</string>
    <string name="shop_name">Shop name:</string>
    <string name="shop_address">Shop address:</string>
    <string name="customer_name">Customer name:</string>
    <string name="pickup_time">Pickup time:</string>
    <string name="delivery_notes">Delivery notes:</string>
    <string name="pending_works">You have pending orders.</string>
    <string name="got_it">Got it</string>
    <string name="service_not_started">Enter service to access this section.</string>
    <string name="shop_phone">Shop phone number:</string>
    <string name="customer_address">Customer address:</string>
    <string name="customer_phone">Customer phone:</string>
    <string name="esimated_delivery_time">Estimated delivery time:</string>
    <string name="proposal_to_activeOrder">Thank you! We moved this proposal to the active orders section</string>

    <string name="deliver_order">Deliver order</string>
    <string name="message_deliver_order_activity_with_nfc">Insert validation code for order delivery. You can use also the NFC function for code exchange</string>
    <string name="message_deliver_order_activity_with_nfc_off_nfc">Insert validation code for order delivery. You can use also the NFC function for code exchange but first turn it on</string>
    <string name="message_deliver_order_activity">Insert validation code for order delivery</string>
    <string name="delivered">Delivered</string>
    <string name="wrong_validation_code">Wrong validation code</string>
    <string name="password_confirm_wrong">Password confirm doesn\'t matches</string>
    <string name="delivery_cost">Delivery cost: </string>

    <string name="title_activity_account">My account</string>
    <string name="title_activity_delivery_detail">Delivery detail</string>
    <string name="title_activity_order_detail">Order detail</string>
    <string name="title_activity_proposal_detail">Proposal detail</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_signup">Sign up</string>
    <string name="title_activity_deliver_order">Deliver order</string>
</resources>


