<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpActivity">

        <EditText
            android:id="@+id/editTextName"
            style="@style/EditTextMain"
            android:layout_width="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/edit_tex_rndb"
            android:ems="10"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/editTextSurname"
            style="@style/EditTextMain"
            android:layout_width="312dp"
            android:background="@drawable/edit_tex_rndb"
            android:ems="10"
            android:hint="@string/surname"
            android:importantForAutofill="no"
            android:inputType="textNoSuggestions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextName" />

        <EditText
            android:id="@+id/editTextMail"
            style="@style/EditTextMain"
            android:layout_width="312dp"
            android:background="@drawable/edit_tex_rndb"
            android:ems="10"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextSurname" />

        <EditText
            android:id="@+id/editTextPhone"
            style="@style/EditTextMain"
            android:layout_width="312dp"
            android:background="@drawable/edit_tex_rndb"
            android:ems="10"
            android:hint="@string/phone_number"
            android:importantForAutofill="no"
            android:inputType="phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextMail" />

        <EditText
            android:id="@+id/editTextPassword"
            style="@style/EditTextMain"
            android:layout_width="312dp"
            android:background="@drawable/edit_tex_rndb"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />


        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="30dp"
            android:background="#c0c0c0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

        <Button
            android:id="@+id/buttonSignUp"
            style="@style/BtnMain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/btn_bg"
            android:text="@string/signup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

        <TextView
            android:id="@+id/questionRegistered"
            style="@style/TextViewMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/hint_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSignUp" />

        <Button
            android:id="@+id/buttonLogin"
            style="@style/BtnAccent"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_bg"
            android:text="@string/goto_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/questionRegistered" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="148dp"
            android:layout_height="143dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/icon_foreground" />


</androidx.constraintlayout.widget.ConstraintLayout>
