<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageViewRestaurateur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/icon" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewOrderNumberLabel"
            style="@style/TextViewVerySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="2dp"
            android:text="@string/label_order_number"
            app:layout_constraintBottom_toTopOf="@+id/textViewOrderNumber"
            app:layout_constraintStart_toStartOf="parent" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewOrderNumber"
            style="@style/TextViewSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewShopName"
            style="@style/TextViewLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageViewRestaurateur"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewLabelDeliveryDate"
            style="@style/TextViewSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/delivery_date"
            app:layout_constraintStart_toEndOf="@+id/imageViewRestaurateur"
            app:layout_constraintTop_toBottomOf="@+id/textViewShopName" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewDeliveryTimeOrder"
            style="@style/TextViewMediumValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            app:layout_constraintStart_toEndOf="@+id/imageViewRestaurateur"
            app:layout_constraintTop_toBottomOf="@+id/textViewLabelDeliveryDate" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewLabelCustomerAddress"
            style="@style/TextViewSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/delivery_address"
            app:layout_constraintStart_toEndOf="@+id/imageViewRestaurateur"
            app:layout_constraintTop_toBottomOf="@+id/textViewDeliveryTimeOrder" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewCustomerAddress"
            style="@style/TextViewMediumValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageViewRestaurateur"
            app:layout_constraintTop_toBottomOf="@+id/textViewLabelCustomerAddress" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>

